src/app/header/header.component.scss
// Extra Styles
.btn {
  display: grid;
  place-items: center;

  padding: 0.3em;

  cursor: pointer;
}

.hidden {
  display: none;
}

// Header & Navbar Styles
.nav-header {
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.primary-nav,
.main-elements,
.details-elements {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.primary-nav {
  display: flex;

  margin: auto;
  padding: 1em;
}

.main-elements {
  flex-direction: row-reverse;
  align-items: baseline;
}

// Main Navigation Styles
.nav-elements {
  position: absolute;
  left: 0px;
  top: 0px;

  background-color: rgba(0, 0, 0, 0.75);
  width: 100%;
}

.nav-list {
  display: flex;
  flex-direction: column;
  gap: 1em;

  background-color: white;
  height: 100vh;
  width: 70%;
  max-width: 400px;

  padding: 1.5em;

  font-weight: bold;
  .nav-item:first-child {
    margin-bottom: 2em;
  }
  .nav-item {
    a {
      &:focus {
        outline: none;
        border-bottom: 2px solid hsl(26, 100%, 55%);
      }
    }
  }
}

// Details Styles
.details-elements {
  margin-left: auto;
  .profile-btn {
    img {
      width: 24px;
    }
  }
}

// Responsiveness
@media screen and (min-width: 1024px) {
  .nav-header {
    width: 95%;
    max-width: 1200px;
    margin: auto;
    box-shadow: none;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  }

  .primary-nav {
    padding: 1.5em 0em;
  }

  .main-elements {
    flex-direction: row;
  }

  .menu-btn {
    display: none;
  }

  .logo {
    margin-right: 2em;
  }

  .nav-elements {
    position: relative;
    left: auto;
    top: auto;

    background-color: transparent;
    width: 100%;
  }

  .nav-list {
    display: flex;
    flex-direction: row;

    background-color: transparent;
    height: auto;
    width: auto;
    max-width: auto;

    padding: 0em;

    font-weight: 400;
    .nav-item:first-child {
      display: none;
    }
    .nav-item {
      &:hover {
        a {
          border-bottom: 2px solid hsl(26, 100%, 55%);
        }
      }
    }
  }

  .details-elements {
    gap: 1.5em;
    .profile-btn {
      img {
        width: 48px;
        &:hover {
          outline: 2px solid hsl(26, 100%, 55%);
          border-radius: 100%;
        }
      }
    }
  }

  .hidden {
    display: block;
  }
}

